# serializer version: 1
# name: test_setup
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Timer Open',
    }),
    'context': <ANY>,
    'entity_id': 'switch.timer_open',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup.1
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Timer Open',
    }),
    'context': <ANY>,
    'entity_id': 'switch.timer_open',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
